# library-unremarkable-gui

./: CMakeLists.txt
cmake/: install.cmake
example/: CMakeLists.txt  Main.cpp  main.cpp
include/: Application.hpp  Frame.hpp  Utility.hpp  Widget.hpp  application.hpp  unremarkable-main.hpp  utility.hpp
src/: Application.cpp  CMakeLists.txt  Frame.cpp  Widget.cpp  application.cpp  unremarkable-main.cpp  utility.cpp
